--- a/css/main.css
+++ b/css/main.css
@@ -210,22 +210,46 @@ body {
   transition-property: opacity, visibility;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--cubic-bezier);
+  overflow-y: scroll;
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  min-height: 581px;
-  padding: 40px 41px;
+  position: fixed;
+  top: 85px;
+  left: 15px;
+  min-width: 355px;
+  width: 100%;
+  min-height: 609px;
+  padding: 47px 40px;
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition-property: transform;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--cubic-bezier);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 208px;
+    left: 159px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    min-width: 528px;
+    min-height: 581px;
+    padding: 40px 41px;
+  }
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(1.3);
@@ -280,8 +304,13 @@ body {
   align-items: center;
 }
 .form-field {
-  width: 448px;
+  min-width: 370px;
   margin-bottom: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .form-field {
+    width: 448px;
+  }
 }
 .form-field:nth-of-type(4n) {
   margin-bottom: 20px;
@@ -363,10 +392,17 @@ body {
 .policy-text,
 .policy-link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .policy-text,
+.policy-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .policy-link {
@@ -379,17 +415,23 @@ body {
   position: absolute;
   display: inline-block;
   content: "";
-  bottom: 5px;
+  bottom: 3px;
   left: 0;
   width: 100%;
   height: 0.5px;
   background-color: var(--accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .policy-link::after {
+    bottom: 5px;
+  }
 }
 
 .new-checkbox {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 16px;
   height: 15px;
   border: 2px solid #212121;
@@ -567,29 +609,107 @@ body {
   }
 }
 
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
 .mobile-menu {
-  display: none;
   position: fixed;
-  top: 60px;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 796px;
-  background-color: bisque;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
 }
-.mobile-menu.is-open {
+.mobile-menu__container {
+  display: flex;
+  flex-direction: column;
+  padding: 48px 40px;
+  height: 100%;
+}
+
+.mobile-menu__button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+.mobile-menu__button:hover .icon-cross {
+  fill: #2196F3;
+}
+
+.icon-cross {
+  fill: #212121;
+}
+
+.nav-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.nav-list__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.nav-list__link--active {
   display: block;
+  color: #2196F3;
+  transform: translateX(8px);
+}
+
+.mob-menu-wrap {
+  margin-top: auto;
+}
+
+.contacts-list {
+  margin-bottom: 64px;
+}
+
+.contacts-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.contacts-list__link {
+  text-decoration: none;
+}
+.contacts-list__link--tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+.contacts-list__link--mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+@media screen and (min-width: 480px) {
+  .social-list {
+    flex-wrap: nowrap;
+  }
+}
+
+.social-list__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+
+.social-list__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 .hero {
