--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,18 +7,18 @@
   transition-property: opacity, visibility;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--cubic-bezier);
+  overflow-y: scroll;
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  position: fixed;
+  top: 85px;
+  left: 15px;
 
-  width: 528px;
-  min-height: 581px;
-
-  padding: 40px 41px;
+  min-width: 355px;
+  width: 100%;
+  min-height: 609px;
+  padding: 47px 40px;
 
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -28,12 +28,31 @@
   transition-property: transform;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--cubic-bezier);
-  
-  
-.backdrop.is-hidden & {
-  transform: translate(-50%, -50%) scale(1.3);
-}
 
+  @include mobile {
+    max-width: 450px;
+  }
+
+  @include tablet {
+    position: absolute;
+    top: 208px;
+    left: 159px;
+  }
+
+  @include desktop {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    min-width: 528px;
+    min-height: 581px;
+
+    padding: 40px 41px;
+  }
+
+  .backdrop.is-hidden & {
+    transform: translate(-50%, -50%) scale(1.3);
+  }
 }
 
 .close-modal {
@@ -53,25 +72,21 @@
   align-items: center;
   justify-content: center;
 
-&:hover .close-icon,
-&:focus .close-icon {
-  fill: var(--accent-color);
-}
-
+  &:hover .close-icon,
+  &:focus .close-icon {
+    fill: var(--accent-color);
+  }
 }
 
 .close-icon {
   fill: #000000;
   transition: fill var(--transition-duration) var(--cubic-bezier);
 
-.close-modal:hover &,
-.close-modal:focus & {
-  fill: var(--accent-color);
+  .close-modal:hover &,
+  .close-modal:focus & {
+    fill: var(--accent-color);
+  }
 }
-
-}
-
-
 
 .is-hidden {
   opacity: 0;
@@ -94,21 +109,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   &-field {
-  width: 448px;
-  margin-bottom: 10px;
+    min-width: 370px;
 
-&:nth-of-type(4n) {
-  margin-bottom: 20px;
+    margin-bottom: 10px;
+
+    @include desktop {
+      width: 448px;
+    }
+
+    &:nth-of-type(4n) {
+      margin-bottom: 20px;
+    }
+  }
 }
-
-}
-  
-}
-
-
-
 
 .input-label {
   display: inline-block;
@@ -142,16 +157,14 @@
 
   transition: border-color var(--transition-duration) var(--cubic-bezier);
 
-&::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
 
-&:focus {
-  border-color: var(--accent-color);
+  &:focus {
+    border-color: var(--accent-color);
+  }
 }
-
-}
-
 
 .input-wrap {
   position: relative;
@@ -167,10 +180,9 @@
 
   transition: fill var(--transition-duration) var(--cubic-bezier);
 
-.form-input:focus-within + & {
-  fill: var(--accent-color);
-}
-
+  .form-input:focus-within + & {
+    fill: var(--accent-color);
+  }
 }
 
 .message {
@@ -183,22 +195,26 @@
 .policy {
   margin-bottom: 30px;
 
-&-field {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  &-field {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
-
-}
-
 
 .policy-text,
 .policy-link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
+
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+
+  @include desktop {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .policy-link {
@@ -207,25 +223,28 @@
   margin-left: 7px;
   color: #2196f3;
 
-&::after {
-  position: absolute;
-  display: inline-block;
-  content: "";
-  bottom: 5px;
-  left: 0;
-  width: 100%;
-  height: 0.5px;
-  background-color: var(--accent-color);
+  &::after {
+    position: absolute;
+    display: inline-block;
+    content: "";
+    bottom: 3px;
+
+    left: 0;
+    width: 100%;
+    height: 0.5px;
+    background-color: var(--accent-color);
+
+    @include desktop {
+      bottom: 5px;
+    }
+  }
 }
-
-}
-
-
 
 .new-checkbox {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 
   width: 16px;
   height: 15px;
@@ -242,18 +261,16 @@
   transition: background-color var(--transition-duration) var(--cubic-bezier),
     border-color var(--transition-duration) var(--cubic-bezier);
 
-.checkbox:checked + .policy-field > & {
-  border: 2px solid transparent;
-  background-color: var(--accent-color);
-  fill: #ffffff;
-}
+  .checkbox:checked + .policy-field > & {
+    border: 2px solid transparent;
+    background-color: var(--accent-color);
+    fill: #ffffff;
+  }
 
-.checkbox:focus + .policy-field > & {
-  border-color: var(--accent-color);
+  .checkbox:focus + .policy-field > & {
+    border-color: var(--accent-color);
+  }
 }
-
-}
-
 
 .form-btn {
   width: 200px;
@@ -264,11 +281,8 @@
 
   transition: background-color var(--transition-duration) var(--cubic-bezier);
 
-&:hover,
-&:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
-
-}
-
-
