--- a/sass/layout/main-page/_hero.scss
+++ b/sass/layout/main-page/_hero.scss
@@ -3,27 +3,72 @@
   padding-top: 118px;
   padding-bottom: 118px;
 
-  @include desktop {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../../../images/hero-mob@1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-  max-width: 1600px;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../../../images/hero-mob@2x.jpg);
   }
-  
+
+  @include mobile {
+background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../../../images/hero-tab@1.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../../../images/hero-tab@2x.jpg);
+    }
+  }
+
+  @include tablet {
+    background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../../../images/hero-desk@1.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../../../images/hero-desk@2x.jpg);
+    }
+  }
+
+  @include desktop {
+    padding-top: 200px;
+    padding-bottom: 200px;
+
+    max-width: 1600px;
+  }
 
   margin: 0 auto;
-  
-  background-color: #c4c4c4;
-  // background-image: linear-gradient(
-  //     rgba(47, 48, 58, 0.4),
-  //     rgba(47, 48, 58, 0.4)
-  //   ),
-  //   url(../../../images/hero-img.jpg);
-  // background-repeat: no-repeat;
-  // background-position: center;
-  // background-size: cover;
 
-  @include mobile{
+  background-color: #c4c4c4;
+
+  @include mobile {
     width: 100%;
   }
 }
@@ -42,13 +87,11 @@
   text-transform: uppercase;
   color: var(--title-white-color);
 
-@include desktop {
-  
-  max-width: 696px;
-  font-size: 44px;
-  line-height: 1.36;
-}
-
+  @include desktop {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__btn {
@@ -65,8 +108,6 @@
 
   &:hover,
   &:focus {
-  background-color: #188ce8;
+    background-color: #188ce8;
+  }
 }
-}
-
-
