--- a/sass/layout/main-page/_page-header.scss
+++ b/sass/layout/main-page/_page-header.scss
@@ -1,6 +1,5 @@
 .header {
   position: relative;
-
   text-decoration: none;
 
   &__container {
@@ -8,14 +7,14 @@
     align-items: center;
   }
 
-  &__nav{
-  @include tablet {
+  &__nav {
+    @include tablet {
       margin-right: 96px;
-  }
+    }
 
-  @include desktop {
-    margin-right: auto;
-  }
+    @include desktop {
+      margin-right: auto;
+    }
   }
 }
 
@@ -26,8 +25,6 @@
     display: flex;
     gap: 50px;
   }
-
-  
 }
 
 .menu__link {
@@ -78,7 +75,7 @@
     gap: 10px;
   }
 
-  @include desktop{
+  @include desktop {
     gap: 30px;
   }
 }
@@ -117,7 +114,7 @@
 
 .contact-list__icon {
   fill: var(--secondary-text-color);
-  
+
   @include tablet {
     margin-right: 10px;
   }
@@ -144,6 +141,8 @@
   }
 }
 
+// MOBILE-MENU
+
 .menu-button {
   display: flex;
   align-items: center;
@@ -157,30 +156,109 @@
   }
 }
 
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
 .mobile-menu {
-  display: none;
-
   position: fixed;
-  top: 60px;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 796px;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
 
-  background-color: bisque;
-
-  &.is-open {
-    display: block;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    padding: 48px 40px;
+    height: 100%;
   }
+}
+
+.mobile-menu__button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+    &:hover .icon-cross {
+    fill: #2196F3;
+  }
+}
+
+.icon-cross{
+  fill: #212121;
+}
+
+.nav-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.nav-list__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+
+  color: #212121;
+}
+
+.nav-list__link--active{
+  display: block;
+  color: #2196F3;
+  transform: translateX(8px);
+}
+
+.mob-menu-wrap{
+  margin-top: auto;
+}
+
+.contacts-list{
+margin-bottom: 64px;
+}
+
+.contacts-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.contacts-list__link {
+  text-decoration: none;
+
+  &--tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+&--mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+}
+
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+
+  @include mobile {
+    flex-wrap: nowrap;
+  }
+}
+
+.social-list__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+
+.social-list__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
