--- a/sass/layout/main-page/_hero.scss
+++ b/sass/layout/main-page/_hero.scss
@@ -7,7 +7,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/hero-mob@1.jpg);
+    url(../images/hero-mob@1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -19,7 +19,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero-mob@2x.jpg);
+      url(../images/hero-mob@2x.jpg);
   }
 
   @include mobile {
@@ -27,7 +27,7 @@ background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/hero-tab@1.jpg);
+    url(../images/hero-tab@1.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -35,7 +35,7 @@ background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero-tab@2x.jpg);
+        url(../images/hero-tab@2x.jpg);
     }
   }
 
@@ -44,7 +44,7 @@ background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/hero-desk@1.jpg);
+    url(../images/hero-desk@1.jpg);
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -53,7 +53,7 @@ background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero-desk@2x.jpg);
+        url(../images/hero-desk@2x.jpg);
     }
   }
 
