--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,13 +12,13 @@
 
 .modal {
   position: fixed;
-  top: 85px;
-  left: 15px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 
-  min-width: 355px;
-  width: 100%;
-  min-height: 609px;
-  padding: 47px 40px;
+  max-width: 450px;
+  width: calc(100% - 30px);
+  padding: 40px;
 
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -29,21 +29,12 @@
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--cubic-bezier);
 
-  @include mobile {
-    max-width: 450px;
-  }
 
   @include tablet {
     position: absolute;
-    top: 208px;
-    left: 159px;
   }
 
   @include desktop {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
     min-width: 528px;
     min-height: 581px;
 
@@ -111,13 +102,12 @@
   align-items: center;
 
   &-field {
-    min-width: 370px;
-
+    width: 100%;
     margin-bottom: 10px;
 
-    @include desktop {
-      width: 448px;
-    }
+    // @include desktop {
+    //   width: 448px;
+    // }
 
     &:nth-of-type(4n) {
       margin-bottom: 20px;
@@ -204,6 +194,7 @@
 
 .policy-text,
 .policy-link {
+  display: inline-block;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
@@ -227,12 +218,16 @@
     position: absolute;
     display: inline-block;
     content: "";
-    bottom: 3px;
+    bottom: 4px;
 
     left: 0;
     width: 100%;
     height: 0.5px;
     background-color: var(--accent-color);
+
+    @include tablet {
+      bottom: 3px;
+    }
 
     @include desktop {
       bottom: 5px;
