--- a/sass/layout/main-page/_benefits.scss
+++ b/sass/layout/main-page/_benefits.scss
@@ -30,10 +30,12 @@
 }
 }
 
-
+@media screen and (max-width: 767px) {
 .benefits-list__item:not(:last-child) {
   margin-bottom: 30px;
 }
+}
+
 
 .benefits-list__title {
   margin-bottom: 10px;
